<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/ivAlumno"
        android:src="@mipmap/ic_launcher"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txvNombre"
                android:text="@string/txvNombre"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txvCarrera"
                android:text="@string/txvCarrera"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txvFechaIngreso"
                android:text="@string/txvFechaIngreso"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txvNumeroCuenta"
                android:text="@string/txvNumeroCuenta"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txvCorreo"
                android:text="@string/txvCorreo"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:textColor="@color/black"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>