<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".RegistrarAlumnosActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivAlumnos"
                    android:layout_width="150dp"
                    android:layout_height="117dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/imagen_alumnos"
                    app:srcCompat="@drawable/ic_masculino"
                    tools:ignore="ImageContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="40dp"
                        android:text="@string/tvgenero"
                        android:textColor="@color/black" />

                    <Spinner
                        android:id="@+id/spnGenero"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="32dp"
                        android:background="@color/white"

                        android:minHeight="48dp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNumeroCuenta"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_numero_cuenta"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:helperText="Obligatorio*"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/Red"
                app:startIconDrawable="@drawable/icono_cuenta">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiltxtNumeroCuenta"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="11"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNombre"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_nombre"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text"
                app:helperText="Obligatorio*"
                app:helperTextTextColor="@color/Red"
                app:startIconDrawable="@drawable/icono_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiltxtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="51"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCarrera"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_carrera"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text"
                app:helperText="Obligatorio*"
                app:helperTextTextColor="@color/Red"
                app:startIconDrawable="@drawable/icono_carrera">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiltxtCarrera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="51"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFecha"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_Fecha"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:helperText="Obligatorio*"
                app:helperTextTextColor="@color/Red"
                app:startIconDrawable="@drawable/icono_calendario">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiltxtFecha"
                    android:maxLength="11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCorreo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_correo"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="clear_text"
                app:helperText="Obligatorio*"
                app:helperTextTextColor="@color/Red"
                app:startIconDrawable="@drawable/icono_correo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiltxtCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="51"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRegistrar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/btnRegistrar"
                    android:textColor="@color/black"
                    app:backgroundTint="@null"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btnRegresar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/btnRegresar"
                    android:textColor="@color/black"
                    app:backgroundTint="@null"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btnMostrarAlumno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/btnMostrar"
                    android:textColor="@color/black"
                    app:backgroundTint="@null"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>