<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_activitiesp"
    tools:context=".IngresarPrestamoActivity">
    <ImageButton
        android:id="@+id/btnRegresarP"
        android:layout_width="67dp"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00FFFFFF"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_return"
        app:tint="@color/white"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    <TextView
        android:id="@+id/txvTituloprestamo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="Ingreso de Préstamos"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="119dp"
        android:layout_height="112dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_p" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNumeroPrestamo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_numero_prestamo"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_no_prestamo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiltxtNumeroPrestamo"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="11"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFechaPrestamo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_Fecha_P"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/icono_calendario">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiltxtFechaP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="text"
                    android:maxLength="11"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNumeroCuentaP"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_numero_cuenta"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/icono_cuenta">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiltxtNumeroCuentaP"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="11"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNumeroLibroP"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_numero_libro"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="13"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiltxtNumeroLibroP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="13"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFechaPrestamoD"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/hint_Fecha_PD"
                app:boxBackgroundColor="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/icono_calendario">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiltxtFechaPD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="text"
                    android:maxLength="11"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="93dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRegistarPrestamo"
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="Registar Préstamo"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorBtn"
                    app:cornerRadius="20dp"/>

                <Button
                    android:id="@+id/btnMostarPrestamo"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="Mostrar Préstamos"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorBtn"
                    app:cornerRadius="20dp"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>